# InvoiceParser

./: .gitignore  MANIFEST.in  README.rst  setup.cfg
src/invoice_parser/: controller.py  gui.py  item_treeview.py  pdf_reader.py  pdf_viewer.py
tests/: test_pdf_reader.py
