[metadata]
name = invoice_parser
version = 0.0.0
license = MIT
description = Parse invoce documents for accounting data.
long_description = file: README.rst
author = Bjørn Christian Olsen
author_email = 
classifiers=
    Development Status :: 1 - Planning
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    PyPDF2
    Pillow
    PyMuPDF
    PyAutoGUI
    opencv-python
    python-dateutil

[options.packages.find]
where=src